--- a/app/src/main/res/layout/view_item_brand.xml
+++ b/app/src/main/res/layout/view_item_brand.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardBrand"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="@dimen/margin_small"
