--- a/app/src/main/res/layout/view_item_profile_menu.xml
+++ b/app/src/main/res/layout/view_item_profile_menu.xml
@@ -9,43 +9,18 @@
         android:id="@+id/cardProfileMenuItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_small">
-        <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_margin="@dimen/margin_small"
+        app:cardBackgroundColor="@color/primaryVariant">
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvMenuItem"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintDimensionRatio="1:1"/>
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/ivIcon"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:tint="@color/secondary"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/tvTitle"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintWidth_percent=".5"
-                app:layout_constraintHeight_percent=".5"
-                tools:src="@drawable/ic_favorites"/>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/margin_small"
-                android:layout_marginBottom="@dimen/margin_small"
-                android:textSize="18sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:text="@tools:sample/lorem"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_default"
+            android:textAppearance="@style/Typography.PassionWoman.TextAppearance.Large"
+            android:drawableEnd="@drawable/ic_forward"
+            android:drawablePadding="@dimen/margin_small"
+            app:drawableTint="@color/text"
+            tools:drawableStart="@drawable/ic_favorites"
+            tools:text="@tools:sample/lorem" />
     </androidx.cardview.widget.CardView>
 </FrameLayout>
