--- a/app/src/main/res/layout/fragment_product_card.xml
+++ b/app/src/main/res/layout/fragment_product_card.xml
@@ -127,7 +127,8 @@
                 android:layout_marginStart="@dimen/margin_default"
                 android:padding="@dimen/margin_extra_small"
                 android:gravity="center"
-                android:background="@drawable/bg_discount"
+                android:background="@drawable/bg_round"
+                android:backgroundTint="@color/secondaryVariant"
                 android:visibility="gone"
                 android:textColor="@color/onSecondary"
                 app:layout_constraintTop_toTopOf="@id/tvPriceDeleted"
