--- a/app/src/main/res/layout/layout_profile_header.xml
+++ b/app/src/main/res/layout/layout_profile_header.xml
@@ -25,6 +25,20 @@
             tools:src="@tools:sample/backgrounds/scenic"/>
     </androidx.cardview.widget.CardView>
 
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/btnEditAvatar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:padding="@dimen/margin_small"
+        android:src="@drawable/ic_edit"
+        android:background="@drawable/bg_round"
+        android:backgroundTint="@color/secondary"
+        android:elevation="@dimen/margin_extra_small"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@id/layoutAvatarWrapper"
+        app:layout_constraintBottom_toBottomOf="@id/layoutAvatarWrapper"
+        tools:visibility="visible"/>
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvName"
         android:layout_width="0dp"
