--- a/app/src/main/res/layout/view_item_product.xml
+++ b/app/src/main/res/layout/view_item_product.xml
@@ -50,7 +50,8 @@
                 android:layout_marginEnd="@dimen/margin_small"
                 android:padding="@dimen/margin_extra_small"
                 android:gravity="center"
-                android:background="@drawable/bg_discount"
+                android:background="@drawable/bg_round"
+                android:backgroundTint="@color/secondaryVariant"
                 android:textColor="@color/onSecondary"
                 android:rotation="-15"
                 app:layout_constraintTop_toTopOf="parent"
