--- a/app/src/demo/res/layout/activity_demo_presets.xml
+++ b/app/src/demo/res/layout/activity_demo_presets.xml
@@ -1,67 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".presentation.feature.demopresets.DemoPresetsActivity">
+    tools:theme="@style/Theme.PassionWoman">
 
     <ru.babaetskv.passionwoman.app.presentation.view.ToolbarView
-        android:layout_width="match_parent"
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
         android:layout_height="?android:attr/actionBarSize"
         android:textAlignment="viewStart"
         app:tv_title="@string/demo_presets_title"
-        app:tv_titleTextAppearance="@style/Typography.PassionWoman.TextAppearance.Title"/>
+        app:tv_titleTextAppearance="@style/Typography.PassionWoman.TextAppearance.Title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-    <FrameLayout
-        android:layout_width="match_parent"
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <androidx.core.widget.NestedScrollView
+        android:fillViewport="true"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
-            <LinearLayout
-                android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvPresets"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:paddingHorizontal="@dimen/margin_default"
+                android:nestedScrollingEnabled="false"
+                android:orientation="vertical"
+                android:layoutAnimation="@anim/layout_fade_in"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:listitem="@layout/view_item_single_preset"/>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvPresets"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingHorizontal="@dimen/margin_default"
-                    android:nestedScrollingEnabled="false"
-                    android:orientation="vertical"
-                    android:layoutAnimation="@anim/layout_fade_in"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/view_item_single_preset"/>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnApplyPresets"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/margin_default"
+                android:layout_marginBottom="@dimen/margin_default"
+                android:text="@string/demo_presets_apply"
+                app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
+                app:layout_constraintTop_toBottomOf="@id/rvPresets"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="1"
+                app:layout_constraintWidth_percent="@integer/input_constraint_width_percentage"
+                style="@style/Widget.PassionWoman.Button.Colored"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"/>
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btnApplyPresets"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/margin_default"
-                    android:layout_marginBottom="@dimen/margin_default"
-                    android:text="@string/demo_presets_apply"
-                    app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
-                    style="@style/Widget.PassionWoman.Button.Colored"/>
-            </LinearLayout>
-        </androidx.core.widget.NestedScrollView>
-
-        <ru.babaetskv.passionwoman.app.presentation.view.ProgressView
-            android:id="@id/progressView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"
-            tools:visibility="visible"/>
-    </FrameLayout>
-</LinearLayout>
+    <ru.babaetskv.passionwoman.app.presentation.view.ProgressView
+        android:id="@id/progressView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:visibility="visible"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
