--- a/app/src/main/res/layout-land/view_stub.xml
+++ b/app/src/main/res/layout-land/view_stub.xml
@@ -12,11 +12,12 @@
         android:id="@+id/ivBanner"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="@dimen/margin_small"
         android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintDimensionRatio="2:1"
+        app:layout_constraintBottom_toTopOf="@id/tvMessage"
         tools:src="@drawable/banner_in_development"/>
 
     <androidx.appcompat.widget.AppCompatImageButton
@@ -32,11 +33,11 @@
         android:id="@+id/tvMessage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_small"
         android:layout_marginHorizontal="@dimen/margin_default"
         android:gravity="center"
         android:textAppearance="@style/Typography.PassionWoman.TextAppearance.Title"
         app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintTop_toBottomOf="@id/ivBanner"
         app:layout_constraintBottom_toTopOf="@id/btnAction"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,8 +48,7 @@
         android:id="@+id/btnAction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_small"
-        app:layout_constraintTop_toBottomOf="@id/tvMessage"
+        android:layout_marginBottom="@dimen/margin_default"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
