--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="categories_list_span_count">1</integer>
     <integer name="categories_list_orientation">1</integer>
+    <integer name="profile_menu_item_list_span_count">1</integer>
 </resources>
