--- a/app/src/main/res/layout-large/fragment_product_list.xml
+++ b/app/src/main/res/layout-large/fragment_product_list.xml
@@ -58,13 +58,22 @@
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="toolbar, layoutSearch"/>
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentDetailsContainer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent=".6"/>
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/barrierToolbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toStartOf="@id/fragmentDetailsContainer">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -157,7 +166,7 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/fragmentDetailsContainer"
         app:sv_action="@string/retry"
         app:sv_isBackVisible="false" />
 </androidx.constraintlayout.widget.ConstraintLayout>
