Set up landscape mode for the home screen

--- a/app/src/main/res/values-large-land/integers.xml
+++ b/app/src/main/res/values-large-land/integers.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <integer name="stories_items_per_page">3</integer>
+    <integer name="products_items_per_page">2</integer>
+    <integer name="brands_list_span_count">4</integer>
     <integer name="products_list_span_count">2</integer>
 </resources>
