--- a/app/src/main/res/layout/view_item_product.xml
+++ b/app/src/main/res/layout/view_item_product.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ru.babaetskv.passionwoman.app.presentation.view.overlaid.OverlaidConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:ocl_overlay="alpha">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardPreview"
@@ -115,4 +116,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         style="@style/Widget.PassionWoman.Button.Colored"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ru.babaetskv.passionwoman.app.presentation.view.overlaid.OverlaidConstraintLayout>
