--- a/data/src/demo/assets/demo_db_editor/templates/base.html
+++ b/data/src/demo/assets/demo_db_editor/templates/base.html
@@ -18,9 +18,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">About</a>
-            </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="categories/new">Add category</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="products/new">Add product</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">About</a>
+                </li>
             </ul>
         </div>
     </nav>
