Added product items dialog for the editor

--- a/data/src/demo/assets/demo_db_editor/templates/create_product.html
+++ b/data/src/demo/assets/demo_db_editor/templates/create_product.html
@@ -44,7 +44,36 @@
 
     <div class="form-group">
         <h2>Items</h2>
-        <button type="button" class="btn-secondary" onclick="addProductItem({{ colorsJson }})">Add</button>
+        <button type="button" class="btn-secondary" id="btnAddItem">Add</button>
+
+        <div class="modal fade" id="addItemModal" tabindex="-1" aria-labelledby="addItemModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="addItemModalLabel">Add product item</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+
+                  <div class="modal-body">
+
+                      <select id="select_color" class="form-control">
+                          <option value="">select color...</option>
+                          {% for color in colors %}
+                              <option value="{{ color['id'] }}">{{ color['ui_name'] }}</option>
+                          {% endfor %}
+                          <!-- TODO: add option to create new color -->
+                      </select>
+                  </div>
+
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" id="btnAddItemModalCancel">Close</button>
+                      <button type="button" class="btn btn-primary" id="btnAddItemModalApply">Apply</button>
+                  </div>
+                </div>
+            </div>
+        </div>
+
         <table class="table table-bordered" id="table_items"></table>
     </div>
 
@@ -54,9 +83,43 @@
 
 {% block scripts %}
 <script>
+    const modal = new bootstrap.Modal(document.getElementById('addItemModal'))
+
+    document.getElementById("btnAddItem").addEventListener("click", function () {
+        var colorSelector = document.getElementById('select_color')
+        colorSelector.value = ""
+
+        modal.show()
+    });
+
+    document.getElementById("btnAddItemModalCancel").addEventListener("click", function () {
+        modal.hide()
+    });
+
+    document.getElementById("btnAddItemModalApply").addEventListener("click", function () {
+        var colorSelector = document.getElementById('select_color')
+        var colorId = colorSelector.value
+        var colorName = colorSelector.options[colorSelector.selectedIndex].text
+
+        var productItemsTable = document.getElementById('table_items')
+        var row = productItemsTable.insertRow()
+        var cell = row.insertCell()
+
+        var input = document.createElement('input')
+        input.name = "product_item_color[]"
+        input.value = colorId
+        input.type = "hidden"
+        cell.appendChild(input)
+
+        var paragraph = document.createElement('p')
+        paragraph.innerHTML = colorName
+        cell.appendChild(paragraph)
+
+        modal.hide()
+    });
+
     function updatePreview() {
         preview.src = URL.createObjectURL(event.target.files[0]);
     }
 </script>
-<script src="/static/js/scripts.js"></script>
 {% endblock %}
